Fix overflow on 404 page

--- a/app/_sass/_error.sass
+++ b/app/_sass/_error.sass
@@ -17,8 +17,7 @@
   p
     position: absolute
     bottom: -60px
-    left: -400px
-    width: 1000px
+    width: 100%
     text-align: center
 
   &:before, &:after
